feat(api): initial back-end for representations
